# sensorless_force_control

./: .gitignore  CMakeLists.txt  README.md  girona_controller_params.yaml  package.xml
cfg/: Admittance.cfg
config/bravo/: predefined_motions.yaml  ros_control.yaml
config/control/: bravo_joints.yaml  joint_cmd_watchdog.yaml  model_benchmark.yaml  model_optimized.yaml  model_optimized_withpitch_noconstraints.yaml  model_wrenchsensor.yaml  tcm.yaml  tcm_with_thruster_torque.yaml
config/girona1000/: controller_vectorial.yaml
data/girona1000/: back_thrusters_support.dae  horizontal_thruster.dae  thruster.dae
functionlib/: config.h
functionlib/contact_control/: admittance.h
functionlib/dynamic_control/: dynamic_controller.h  pid.h  super_twisting_smc.h
functionlib/filter/: filter_base.h  low_pass_filter.h
functionlib/force_control/: force_control.h  quaternion_admittance_controller.h
functionlib/hardware/: manipulator_base.cpp  manipulator_base.h  uvms_single_arm.h  vehicle_base.h
functionlib/kinematic_control/: pose_controller.h  task_priority_control.h
functionlib/observer/: acceleration_observer.h  contact_wrench_observer.h  state_observer.h
functionlib/pid/: p.h  pd.h  pi.h  pid.h
functionlib/robot_model/: manipulator_base.h  manipulator_from_dh.h  manipulator_from_yaml.h  uvms_regressor.h  uvms_single_arm.h
functionlib/stsm_control/: stsmc_example.cpp  super_twisting_smc.cpp  super_twisting_smc.h
functionlib/task_priority_control/: possible_tasks.h  task_priority_solver.h
functionlib/thrust_allocation/: thruster_allocator.h  thruster_allocator_base.h  thruster_allocator_dls.h  thruster_allocator_dls_offset.h
functionlib/utilts/: error_representation.h  linear_algebra.h  matrix.h  print.h  real.h  rotation.cpp  rotation.h  types.h  vector.h
functionlib/uvms/: uvms_controller.h
launch/: girona1000_pool.launch  joint_cmd_watchdog.launch.xh  joystick_bridge.launch
launch/core/: bravo.launch.core  girona1000_base.launch  girona1000_base.launch.core
log/: controller_data_20260210122142.csv  controller_data_20260210163728.csv  controller_data_20260212171302_with_wrench.csv  controller_data_20260212181115_with_wrench.csv
rviz/: intervention.rviz
scenarios/: girona1000_vectorial.scn  pilot_anode_l.scn  pilot_anode_s.scn  pilot_ladder.scn  pilot_pool.scn  pilot_structure.scn
scripts/: build_bravo_dh.py  build_girona1000_tcm.py  build_girona1000_tcm_with_thrust_torque.py  build_thrust_relation.py  plot.md  plot_pushing_scenario.py  utilts_PIDRegulator.py  utilts_data_logger_plotter.py  utilts_force_control.py  utilts_kinematics_control.py  utilts_task_priority_control.py  utilts_uvms_math.py  utilts_uvms_regressor.py
src/: girona_controller.cpp  girona_controller.h  girona_controller_collect_data.cpp  girona_controller_collect_data.h  girona_interface.cpp  girona_interface.h  joint_cmd_watchdog.cpp  joystick_bridge.cpp  joystick_bridge.h  logger.h  odom_to_tf.py  test  uvms_api_test.cpp
test/: manipulator_yaml_test.cpp  task_priority_solver_test.cpp  uvms_api_test.cpp
urdf/: girona1000_vectorial.urdf.xacro  girona1000_vectorial_bravo.urdf.xacro
